--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
         <h3 class="header__description">Hello, I'm</h3>
         <h1 class="title gold">Ayman</h1>
         <p class="header__para">
-          I'm an <b class="gold">aspiring Technical Project Manager</b> with a strong passion for building technology to ensure that underrepresented communities and voices are served and heard.
+          I'm an <b class="gold">aspiring Software Engineer</b> with a strong passion for building technology to ensure that underrepresented communities and voices are served and heard.
           <br>
           Here's a bit more <b class="gold click" onclick="toggleModal()">about me</b>.
         </p>
@@ -91,7 +91,7 @@
         <h3 class="modal__title modal__title--about">Here's a bit about me.</h3>
         <h4 class="modal__sub-title modal__sub-title--about">Self Taught Frontend Software Engineer.</h4>
         <p class="modal__para">
-          I'm a sophomore at Indiana University double majoring in <b class="gold">Information Systems</b> and <b class="gold">Informatics</b> with concentrations in <b class="gold">Application Development</b> and <b class="gold">Web-Development</b>. 
+          I'm a sophomore at Indiana University majoring in <b class="gold">Information Systems</b> and minoring in <b class="gold">Computer Science</b> with concentrations in <b class="gold">Application Development</b> and <b class="gold">Web-Development</b>. 
           <br>
           <br>
           My interests in Tech have led me to become a <b class="gold">self studying</b> developer, leveraging technologies such as <b class="gold">Javascript</b> and <b class="gold">Python</b>.
@@ -195,20 +195,50 @@
         <ul class="project__list">
           <li class="project">
             <div class="project__wrapper">
-              <img src="./assets/blurbackground.jpg" class="project__img" alt="">
+              <img src="./assets/ecom.PNG" class="project__img" alt="">
               <div class="project__wrapper--bg"></div>
               <div class="project__description">
                 <h3 class="project__description--title">
-                  Coming Soon! :)
+                  E-Commerce Website
                 </h3>
                 <h4 class="project__description--sub-title">
-                  I'll list the technology used here. 
+                  HTML | CSS | Javascript | React | Git
                 </h4>
                 <p class="project__description--para">
-                  And then I'll describe the project here.
+                  A React E-commerce app that displays data about popular and recommended books. Has the abililty to filter books and add them to cart for purchase.
                 </p>
                 <div class="project__description--links">
-                  <a href="https://aymanbolad.com/" class="project__description--link">
+                  <a href="https://github.com/aynnxn/ECommerce-Store" target="_blank"
+                    class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="https://e-commerce-store-xi.vercel.app/" class="project__description--link">
+                    <i class="fas fa-link"></i>
+                  </a>
+                </div>
+              </div>
+            </div>
+          </li>
+          <li class="project">
+            <div class="project__wrapper">
+              <img src="./assets/eportstatic.PNG" class="project__img" alt="">
+              <div class="project__wrapper--bg"></div>
+              <div class="project__description">
+                <h3 class="project__description--title">
+                  E-Portfolio for Client
+                </h3>
+                <h4 class="project__description--sub-title">
+                  HTML | CSS | JavaScript | Git
+                </h4>
+                <p class="project__description--para">
+                  I developed this Responsive and multi-platform site for a client using semantic HTML5 and CSS3 (+BEM). Personal information and content was replaced to maintain privacy.
+                </p>
+                <div class="project__description--links">
+                  <a href="https://github.com/aynnxn/E-Port-Template" target="_blank"
+                    class="project__description--link">
+                    <i class="fab fa-github"></i>
+                  </a>
+                  <a href="https://e-port-static.vercel.app/" class="project__description--link">
                     <i class="fas fa-link"></i>
                   </a>
                 </div>
@@ -221,30 +251,13 @@
               <div class="project__wrapper--bg"></div>
               <div class="project__description">
                 <h3 class="project__description--title">
-                  Coming Soon! :)
+                  Disaster Relief WebApp
                 </h3>
                 <h4 class="project__description--sub-title">
-                  I'll list the technology used here.
+                  MongoDB, Express.js, React, Node.js
                 </h4>
                 <p class="project__description--para">
-                  And then I'll describe the project here.
-                </p>
-              </div>
-            </div>
-          </li>
-          <li class="project">
-            <div class="project__wrapper">
-              <img src="./assets/blurbackground.jpg" class="project__img" alt="">
-              <div class="project__wrapper--bg"></div>
-              <div class="project__description">
-                <h3 class="project__description--title">
-                  Coming Soon! :)
-                </h3>
-                <h4 class="project__description--sub-title">
-                  I'll list the technology used here.
-                </h4>
-                <p class="project__description--para">
-                  And then I'll describe the project here.
+                  Currently in development! Check back soon for updates :)
                 </p>
                 <div class="project__description--links">
                   <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ"_blank"
@@ -315,3 +328,4 @@
 </body>
 
 </html>
+
